<resources>
    <string name="app_name">奇思火眼</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="start_tip">帮助每个孩子获得成功</string>
    <string name="start_tip1">Easy Learning Easy Winning</string>
    <string name="how_to_invite_content">天天智学采用邀请码注册机制，仅限有邀请码的用户，验证通过后才能注册使用。</string>
    <string name="recommend_first_select">已关注%s个话题 (下一步)</string>
    <string name="evaluate_pop_tag">标签：%s</string>
    <string name="evaluate_pop_count">%s人次</string>
    <string name="mine_info_name">家长姓名：%s</string>
    <string name="mine_info_area">地区：%s</string>
    <string name="mine_info_tip">孩子资料</string>
    <string name="mine_info_child_name">小孩姓名：%s</string>
    <string name="mine_info_child_select">测评对象</string>
    <string name="course_none_tip">课程即将上线，敬请期待！</string>
    <string name="activity_about">cheersmind（“智慧奇思科技”简称），用科技，帮助每一个家庭的孩子成就最好的自己；是一家专注大数据与人工智能在家庭教育领域应用的公司。
公司成立于 2017 年1月，基于认知科学，发展科学，脑科学及教育科学的前沿研究理论，提供以“脑科学与人工智能”为核心的家庭教育移动社区，为3-18岁儿童的家庭提供服务，包含：亲子多元测评、自适应学习内容、专家咨询及训练课程，孩子成长档案等；专家团队包括来自中国高校的教授、美国、英国、澳大利亚、香港、台湾等地的领域学者。\n1.我们是谁\nWe are brain builders.\nWe work for parents and kids.\n2.我们的使命\n用科技，帮助每一个家庭的孩子成就最好的自己（Cheers Mind，Better Life）\n3.我们的远景\n成为一家有伟大技术理想的人工智能公司.\nMake the world smarter.\n4.我们的价值观(cheers)\nC(Client-orientated)客户第一\nH(High-spirit)保持激情\nE(Excellent)追求卓越\nE(Efficient-teamwork)高效协作\nR(Resourceful)拥抱变化\nS(Studious)保持专注</string>
    <string name="myflower_record_title">参与(%s)智评</string>
    <string name="myflower_record_title2">解锁(%s)</string>
    <string name="factor_details_tip">第%s阶段</string>
    <string name="factor_details_tip_complete">第%s阶段完成</string>
    <string name="factor_info_complete" formatted="false">%s/%s</string>
    <string name="factor_info_rank">第%s名</string>
    <string name="factor_info_exceed">%s</string>
    <string name="dimension_hot_lock">%s朵鲜花</string>
    <string name="report_title">%s-智能评价</string>
    <string name="factor_commit_success" formatted="false">阶段%s:%s测评结果提交成功</string>
    <string name="factor_commit_fail" formatted="false">阶段%s:%s测评结果提交失败,请重试！</string>
    <string name="factor_details_show_tip" formatted="false">参与【阶段%s:%s】测评的班级同学得分排名。\n小贴士：测评时间影响最终排名</string>
    <string name="evaluate_question_commit" formatted="false">已完成【阶段%s:%s】的所有问题，是否提交结果？</string>
    <string name="factor_datails_common" formatted="false"><Data><![CDATA[<font color="#f5a400"><b>%s</b></font>/%s]]></Data></string>
    <string name="qs_factor_complete_hint" formatted="false">已完成(阶段%s:%s)的所有问题，是否提交结果？</string>
    <string name="qs_ques_complete_hint">答题还没全部完成确定要退出吗？</string>
    <string name="qs_factor_report_btn_next">继续下一阶段测评</string>
    <string name="qs_factor_report_btn_report">已经全部完成·点击查看报告</string>
    <string name="qs_factor_report_btn_result"><Data><![CDATA[你的总得分，比同个级别<font color="#00b8e9"><b>%s</b></font>的同学更优秀哦！]]></Data></string>
    <string name="qs_factor_detail_ques_count" formatted="false">%s/%s个数量</string>
    <string name="qs_factor_detail_flower_count" formatted="false">花池%s/%s朵</string>
    <string name="qs_factor_detail_react_count">反应时间%s</string>
    <string name="qs_dimension_report_hint">该项%s个阶段你已全部完成，以下是测评结果</string>
    <string name="qs_dimension_report_reuslt">%s结果:</string>
    <string name="qs_dimension_user_count">%s人测评过</string>
    <string name="qs_dimension_pre_complete">请先完成%s话题下相关测评</string>
    <string name="qs_topic_status">(未开始)</string>
    <string name="qs_topic_status0">(进行中)</string>
    <string name="qs_topic_status1">(已完成)</string>
    <string name="error_view_click_to_refresh">点击屏幕,重新加载</string>
    <string name="error_view_no_data">暂无相关内容</string>
    <string name="error_view_loading">加载中…</string>
    <string name="error_view_load_error_click_to_refresh">内容加载失败</string>
    <string name="error_view_network_error_click_to_refresh">网络有误或服务器异常</string>
    <string name="tip_network_error">没有可用的网络</string>
    <string name="reload">重新加载</string>
    <string name="goto_relation">去看看吧</string>
    <string name="error_code_common_text">服务器繁忙，请稍后重试！</string>
    <string name="title_home">首页</string>
    <string name="title_exam">智评</string>
    <string name="title_report">报告</string>
    <string name="title_message">消息</string>
    <string name="title_mine">我的</string>
    <string name="title_discover">发现</string>
    <string name="title_explore">探索</string>
    <string name="title_career_plan">生涯规划</string>
    <string name="title_development_exam">发展测评</string>
    <string name="placeholder_for_item">######</string>
    <string name="brvah_loading">正在加载中…</string>
    <string name="brvah_load_failed">加载失败，请点我重试</string>
    <string name="brvah_load_end">没有更多数据了</string>
    <string name="exam_topic_suitable_user">适合人群：%s</string>
    <string name="exam_topic_endtime">有效期至 %s</string>
    <string name="exam_date">有效期 %s - %s</string>
    <string name="exam_topic_navigate_to_report">测评结果 >></string>
    <string name="exam_dimension_use_count">%s人测过</string>
    <string name="exam_dimension_status_complete">已完成</string>
    <string name="exam_question_count">%s个问题</string>
    <string name="exam_need_to_know">测评须知</string>
    <string name="exam_what">▪ 测什么 ▪</string>
    <string name="student">学生</string>
    <string name="parent">家长</string>
    <string name="lock_tip">请先完成%s场景下相关测评</string>
    <string name="look_report">查看报告</string>
    <string name="cost_time">约%s分钟</string>
    <string name="question_submit_tip">恭喜你，完成所有问题，是否提交结果？</string>
    <string name="question_stop_tip">答题还没全部完成确定要退出吗？</string>
    <string name="question_timeout_tip">需要休息一下吗？</string>
    <string name="pre_question">上一题</string>
    <string name="submit">提交</string>
    <string name="complete_topics_count_summary">完成数量 %s/%s</string>
    <string name="exam_over_tip">测评已结束</string>
    <string name="exam_inactive_tip">测评未开始</string>
    <string name="view_history">查看历史</string>
    <string name="click_question_to_fast">您的手速太快啦！</string>
    <string name="captcha">验证码</string>
    <string name="captcha_has_send_to">验证码已发送至</string>
    <string name="next">下一步</string>
    <string name="register">注册</string>
    <string name="bind">绑定</string>
    <string name="bind_tip">您的%s未绑定手机，请输入手机号码进行绑定</string>
    <string name="class_num_tip_title">什么是邀请码？</string>
    <string name="complete">完成</string>
    <string name="nickname_format_error">昵称为3&#8211;8位数字/英文/中文</string>
    <string name="search_edit_text_hint">搜你喜欢</string>
    <string name="search_error_tip_special_char">为了更精准的搜索，请避免输入标点等特殊符号</string>
    <string name="search_error_tip_length">为了更精准的搜索，请输入2个及以上中文或英文</string>
    <string name="comment_count">评论（%s）</string>
    <string name="comment_mine">我的评论</string>
    <string name="edit_comment">写评论</string>
    <string name="password_tip">密码长度6&#8211;24位，可以是数字、字母等任意字符</string>
    <string name="old_password">旧  密  码</string>
    <string name="new_password">新  密  码</string>
    <string name="again_password">确认密码</string>
    <string name="input_old_password_tip">请输入旧密码</string>
    <string name="input_new_password_tip">请输入新密码</string>
    <string name="input_again_password_tip">请输入确认密码</string>
    <string name="confirm_modify">确认修改</string>
    <string name="total_integral">已获得积分：</string>
    <string name="available_integral">可用积分：</string>
    <string name="integral_tip_add">+%s积分</string>
    <string name="operate_fail">操作失败，请稍后再试</string>
    <string name="blank"> </string>
    <string name="dialog_common_title">温馨提示</string>
    <string name="forbid_phone_num_login">您今天的短信验证码输入错误次数已超过上限，请明天再试。给您造成的不便，敬请谅解，谢谢！</string>
    <string name="invalid_token_tip">您的登录信息已失效，请重新登录</string>
    <string name="input_phone_num">请输入手机号</string>
    <string name="default_area_code">+86</string>
    <string name="network_no">网络异常， 请检查网络</string>
    <string name="bind_phone_num_tip">绑定手机号：%s</string>
    <string name="login">登    录</string>
    <string name="bind_phone_num">绑    定</string>
    <string name="child_info">孩子信息：</string>
    <string name="profile">头像</string>
    <string name="empty_tip_favorite">暂无收藏，赶紧去看看吧</string>
    <string name="empty_tip_message">暂无消息</string>
    <string name="empty_tip_integral">暂无积分</string>
    <string name="empty_tip_report">暂无报告</string>
    <string name="empty_tip_exam">暂无进行中的智评</string>
    <string name="empty_tip_history_exam">暂无历史智评</string>
    <string name="empty_tip_history_seminar">暂无历史专题</string>
    <string name="empty_tip_article_on_category">暂无该分类的文章</string>
    <string name="empty_tip_article_for_search">暂无结果\n换个关键词试试吧~</string>
    <string name="empty_tip_category">暂无分类</string>
    <string name="empty_tip_question_definition">暂无说明</string>
    <string name="empty_tip_task_list">暂无专题</string>
    <string name="empty_tip_exam_module">暂无测评模块</string>
    <string name="empty_tip_exam_task">暂无测评任务</string>
    <string name="empty_tip_exam_task_item">暂无任务内容项</string>
    <string name="empty_tip_choose_course">暂无选科信息</string>
    <string name="empty_tip_exam_comment">暂无留言</string>
    <string name="empty_tip_college_rank">暂无该类院校排名</string>
    <string name="empty_tip_career_plan_record">暂无生涯规划档案</string>
    <string name="empty_tip_career_plan">暂无生涯数据</string>
    <string name="empty_tip_track_record">暂无发展档案信息</string>
    <string name="empty_tip_major_list">暂无专业数据</string>
    <string name="empty_tip_occupation_list">暂无职业数据</string>
    <string name="empty_tip_mine_medal">暂无勋章</string>
    <string name="empty_tip_major_detail_info">暂无专业详情信息</string>
    <string name="empty_tip_major_detail_college">暂无开设院校信息</string>
    <string name="empty_tip_college_detail_info">暂无院校详情信息</string>
    <string name="empty_tip_college_detail_enroll">暂无院校招生信息</string>
    <string name="empty_tip_college_detail_graduation">暂无毕业信息</string>
    <string name="empty_tip_mine_practice">暂无实践</string>
    <string name="empty_tip_mine_practice_item">暂无实践明细</string>
    <string name="empty_tip_enroll_score">未找到符合条件的数据\n试试其他条件呗~</string>
    <string name="empty_tip_college_detail_major">暂无开设专业数据</string>
    <string name="empty_tip_college_detail_key_subject_country">暂无国家重点学科</string>
    <string name="empty_tip_college_detail_key_subject_first_rate">暂无一流学科</string>
    <string name="empty_tip_add_task">暂无可添加的任务</string>
    <string name="empty_tip_sys_rmd_course">暂无系统推荐选科</string>
    <string name="empty_tip_rmd_major">暂无推荐专业</string>
    <string name="empty_tip_course_relate_major">暂无科目相关的专业</string>
    <string name="empty_tip_observe_major">您还未选择意向专业，请点击下方按钮后进行选择</string>
    <string name="empty_tip_attention_list">暂无关注数据</string>
    <string name="begin_time_fmt">开始时间 %s</string>
    <string name="begin_end_fmt">结束时间 %s</string>
    <string name="CompatFlingBehavior">com.cheersmind.cheersgenie.features.view.CompatFlingBehavior</string>
    <string name="track_record">成长档案</string>
    <string name="career_planning">生涯规划</string>
    <string name="practice_center">实践中心</string>
    <string name="knowledge_fun">知识FUN</string>
    <string name="do_count">%s人已学过</string>
    <string name="task_item_lock_tip">请先完成%s</string>
    <string name="career_plan">生涯发展</string>
    <string name="college">学校</string>
    <string name="major">专业</string>
    <string name="occupation">职业</string>
    <string name="career_report">档案</string>
    <string name="select_course">选科助手</string>
    <string name="undergraduate_count">本科生: %s</string>
    <string name="postgraduate_count">研究生: %s</string>
    <string name="international_count">国际学生: %s</string>
    <string name="male_ratio">男生: %s</string>
    <string name="female_ratio">女生: %s</string>
</resources>