<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".features.modules.mine.activity.ModifyPasswordActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <!--标题栏-->
        <include layout="@layout/toolbar"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="20dp"
            android:layout_marginLeft="45dp"
            android:layout_marginRight="45dp"
            android:layout_gravity="center_horizontal"
            android:text="@string/password_tip"
            android:textColor="@color/colorAccent"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="44dp"
                android:layout_marginTop="0dp"
                android:orientation="horizontal"
                android:layout_marginLeft="45dp"
                android:layout_marginRight="45dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="旧  密  码"/>

                <EditText
                    android:id="@+id/et_old_password"
                    android:layout_width="0dp"
                    android:layout_height="42dp"
                    android:layout_weight="1"
                    android:layout_marginLeft="15dp"
                    android:background="#00000000"
                    android:hint="@string/input_old_password_tip"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:maxLength="24"
                    android:singleLine="true"
                    android:textColor="@color/color_333333"
                    android:imeOptions="actionNext"
                    android:textSize="15sp" />

                <CheckBox
                    android:id="@+id/cbox_password"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:background="@android:color/transparent"
                    android:button="@null"
                    android:drawableLeft="@drawable/rbtn_password_view"/>

            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:layout_marginLeft="45dp"
                android:layout_marginRight="45dp"
                android:background="@color/color_717171"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="44dp"
                android:layout_marginTop="0dp"
                android:orientation="horizontal"
                android:layout_marginLeft="45dp"
                android:layout_marginRight="45dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="新  密  码"/>

                <EditText
                    android:id="@+id/et_new_password"
                    android:layout_width="0dp"
                    android:layout_height="42dp"
                    android:layout_weight="1"
                    android:layout_marginLeft="15dp"
                    android:background="#00000000"
                    android:hint="@string/input_new_password_tip"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:maxLength="24"
                    android:singleLine="true"
                    android:textColor="@color/color_333333"
                    android:imeOptions="actionNext"
                    android:textSize="15sp" />

                <CheckBox
                    android:id="@+id/cbox_new_password"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:background="@android:color/transparent"
                    android:button="@null"
                    android:drawableLeft="@drawable/rbtn_password_view"/>

            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:layout_marginHorizontal="45dp"
                android:background="@color/color_717171"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="44dp"
                android:layout_marginTop="0dp"
                android:orientation="horizontal"
                android:layout_marginLeft="45dp"
                android:layout_marginRight="45dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/again_password"/>

                <EditText
                    android:id="@+id/et_again_password"
                    android:layout_width="0dp"
                    android:layout_height="42dp"
                    android:layout_weight="1"
                    android:layout_marginLeft="15dp"
                    android:background="#00000000"
                    android:hint="@string/input_again_password_tip"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:maxLength="24"
                    android:singleLine="true"
                    android:textColor="@color/color_333333"
                    android:imeOptions="actionDone"
                    android:textSize="15sp" />

                <CheckBox
                    android:id="@+id/cbox_again_password"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:background="@android:color/transparent"
                    android:button="@null"
                    android:drawableLeft="@drawable/rbtn_password_view"/>

            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:layout_marginLeft="45dp"
                android:layout_marginRight="45dp"
                android:background="@color/color_717171"/>

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="45dp"
            android:layout_marginRight="45dp"
            android:orientation="vertical">

            <Button
                android:id="@+id/btn_confirm"
                android:layout_width="match_parent"
                android:layout_height="@dimen/heightDefaultWidget"
                android:layout_marginTop="30dp"
                android:background="@drawable/btn_common_round"
                android:enabled="true"
                android:text="@string/confirm_modify"
                android:textColor="@drawable/textcolor_common"
                android:textSize="16sp" />

        </LinearLayout>

    </LinearLayout>

</ScrollView>