<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/pageerrLayout"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#f6f6f6" >

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent" >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:orientation="vertical" >

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal" >

                <ImageView
                    android:id="@+id/iv_error_icon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/page_icon_empty"
                    android:visibility="visible" />

                <!--<ProgressBar-->
                <!--android:id="@+id/animProgress"-->
                <!--android:layout_width="30dip"-->
                <!--android:layout_height="30dip"-->
                <!--android:visibility="gone"-->
                <!--style="@style/empty_loading"-->
                <!--/>-->
                <ProgressBar
                    android:id="@+id/animProgress"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:indeterminateDrawable="@anim/loading_auto"
                    android:indeterminateDuration="1200"
                    android:visibility="gone"
                    />
            </RelativeLayout>

            <TextView
                android:id="@+id/tv_error_tip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="10.0dip"
                android:visibility="visible"
                android:lines="2"
                android:gravity="center"
                android:text="@string/error_view_loading"
                android:textColor="@color/color_666666"
                android:textSize="16sp" />

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_gravity="center_horizontal">

                <!--重新加载-->
                <Button
                    android:id="@+id/btn_reload"
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:text="@string/reload"
                    android:textSize="16sp"
                    android:textColor="@color/color_333333"
                    android:background="@drawable/btn_common_small"/>

                <!--去看看吧-->
                <Button
                    android:id="@+id/btn_goto_relation"
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:text="@string/goto_relation"
                    android:textSize="16sp"
                    android:textColor="@color/color_333333"
                    android:background="@drawable/btn_common_small"/>

            </RelativeLayout>

        </LinearLayout>

    </RelativeLayout>

</RelativeLayout>