<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/shape_corner_white"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_index"
            android:layout_width="22dp"
            android:layout_height="22dp"
            android:gravity="center"
            android:layout_marginRight="10dp"
            android:background="@mipmap/qs_number_circle_nor"
            android:text="1"
            android:textSize="12sp"
            android:textColor="@color/color_2e2e2e"/>
        <TextView
            android:id="@+id/tv_factor_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="factor title"
            android:textSize="14sp"
            android:textColor="@color/color_2e2e2e"/>
    </LinearLayout>

    <TextView
        android:id="@+id/tv_factor_desc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="10dp"
        android:text="factor desc"
        android:textSize="12sp"
        android:textColor="@color/color_2e2e2e"/>

    <TextView
        android:id="@+id/tv_factor_hint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="10dp"
        android:text="factor hint"
        android:textSize="12sp"
        android:textColor="@color/color_fa3131"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/tv_ques_count"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:singleLine="true"
            android:ellipsize="end"
            android:gravity="left"
            android:text="@string/qs_factor_detail_ques_count"
            android:textSize="12sp"
            android:textColor="@color/color_2e2e2e"/>
        <TextView
            android:id="@+id/tv_flower_count"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:singleLine="true"
            android:ellipsize="end"
            android:gravity="center"
            android:text="@string/qs_factor_detail_flower_count"
            android:textSize="12sp"
            android:textColor="@color/color_2e2e2e"/>
        <TextView
            android:id="@+id/tv_time_count"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:singleLine="true"
            android:ellipsize="end"
            android:gravity="right"
            android:text="@string/qs_factor_detail_react_count"
            android:textSize="12sp"
            android:textColor="@color/color_2e2e2e"/>
    </LinearLayout>

    <Button
        android:id="@+id/btn_start"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scrollbars="none"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:text="继续完成测评"
        android:textSize="14sp"
        android:textColor="@color/color_text_white"
        android:background="@mipmap/qs_btn_login_nor" />
</LinearLayout>